--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
   <title>Meteorite</title>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
-  <script src="./app"></script> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>-->
+  <script src="./app"></script> 
 </head>
 <body>
   <h1>Meteorite</h1>
