--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
   <h1>Meteorite</h1>
+
+  <div id="data"></div>
   <!-- 
   <div id="nasaviz"></div>
   <p id="nasadata">loading…</p> -->
