--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,19 @@
 <html>
-<head>
-  <title>Meteorite</title>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>-->
-  <script src="./app"></script> 
-</head>
-<body>
-  <h1>Meteorite</h1>
 
-  <div id="data"></div>
-  <!-- 
+<head>
+    <title>Meteorite</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
+    <script src="./app"></script>
+</head>
+
+<body>
+    <h1>Meteorite</h1>
+
+    <div id="viz"></div>
+    <div id="data"></div>
+    <!-- 
   <div id="nasaviz"></div>
   <p id="nasadata">loading…</p> -->
 </body>
+
 </html>
